--- a/index.html
+++ b/index.html
@@ -15,12 +15,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repudiandae
-      porro, repellendus dolore amet ducimus possimus beatae veniam nisi, velit
-      laborum. Atque vitae dolores, illum deleniti cumque nesciunt assumenda
-      ducimus?
-    </p>
-  </body>
+  <body></body>
 </html>
