--- a/index.html
+++ b/index.html
@@ -36,5 +36,11 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <strong class="tag-red">특가</strong>
+      <strong class="tag-gray">무료배송</strong>
+      <strong class="tag-green">첫리뷰 두배적립!</strong>
+    </div>
+  </body>
 </html>
