--- a/index.html
+++ b/index.html
@@ -38,9 +38,20 @@
   </head>
   <body>
     <div class="container">
-      <strong class="tag-red">특가</strong>
-      <strong class="tag-gray">무료배송</strong>
-      <strong class="tag-green">첫리뷰 두배적립!</strong>
+      <div>
+        <strong class="tag-red">특가</strong>
+        <strong class="tag-gray">무료배송</strong>
+        <strong class="tag-green">첫리뷰 두배적립!</strong>
+      </div>
+
+      <div>
+        <div class="avatar-32">
+          <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
+        </div>
+        <div class="avatar-24">
+          <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
