--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
           <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
         </div>
       </div>
+
+      <div>
+        <div class="star-rating-16">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
