--- a/index.html
+++ b/index.html
@@ -36,5 +36,101 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header class="gnb">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 col-md-12 col-lg-12">
+            <div class="gnb-left">
+              <h1 class="logo">
+                <a href="/">
+                  <img src="assets/Logo.svg" alt="내일의 집" />
+                </a>
+              </h1>
+
+              <nav class="gnb-nav sm-hidden">
+                <h2 class="sr-only">메뉴</h2>
+                <ul class="gnb-nav-list">
+                  <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
+                  <li class="gnb-nav-item"><a href="/">스토어</a></li>
+                  <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                </ul>
+              </nav>
+
+              <button
+                class="gnb-icon-button sm-only"
+                type="button"
+                aria-label="메뉴 열기 버튼"
+              >
+                <i class="ic-menu"></i>
+              </button>
+            </div>
+
+            <div class="gnb-right">
+              <div class="input-group lg-only">
+                <i class="ic-search" aria-hidden></i>
+                <input
+                  class="form-input"
+                  type="text"
+                  placeholder="스토어 검색"
+                />
+              </div>
+
+              <div class="gnb-icon-button-group">
+                <button
+                  class="gnb-icon-button lg-hidden"
+                  type="button"
+                  aria-label="검색창 열기 버튼"
+                >
+                  <i class="ic-search"></i>
+                </button>
+
+                <a
+                  class="gnb-icon-button sm-hidden"
+                  href="/"
+                  aria-label="스크랩북 페이지로 이동"
+                >
+                  <i class="ic-bookmark"></i>
+                </a>
+
+                <a
+                  class="gnb-icon-button sm-hidden"
+                  href="/"
+                  aria-label="내 소식 페이지로 이동"
+                >
+                  <i class="ic-bell"></i>
+                </a>
+
+                <a
+                  class="gnb-icon-button"
+                  href="/"
+                  aria-label="장바구니 페이지로 이동"
+                >
+                  <i class="ic-cart"></i>
+                </a>
+
+                <button
+                  class="gnb-avatar-button sm-hidden"
+                  type="button"
+                  aria-label="마이메뉴 열기 버튼"
+                >
+                  <div class="avatar-32">
+                    <img
+                      src="./assets/image/img-user-01.jpg"
+                      alt="사달러아저씨"
+                    />
+                  </div>
+                </button>
+              </div>
+
+              <button class="sm-hidden btn-primary btn-40" type="button">
+                글쓰기
+                <i class="ic-chevron" aria-hidden></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
