♻️ Create a separate file for gnb-icon-buttons and rename modifiers

--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
                   <h2 class="sr-only">메뉴</h2>
                   <ul class="gnb-nav-list">
                     <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                    <li class="gnb-nav-item"><a href="/">스토어</a></li>
+                    <li class="gnb-nav-item is-active">
+                      <a href="/">스토어</a>
+                    </li>
                     <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
                   </ul>
                 </nav>
 
                 <button
-                  class="gnb-menu-button gnb-icon-button sm-only"
+                  class="gnb-icon-button is-menu sm-only"
                   type="button"
                   aria-label="메뉴 열기 버튼"
                 >
@@ -79,7 +81,7 @@
 
                 <div class="gnb-icon-button-group">
                   <button
-                    class="gnb-search-button gnb-icon-button lg-hidden"
+                    class="gnb-icon-button is-search lg-hidden"
                     type="button"
                     aria-label="검색창 열기 버튼"
                   >
