--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                       aria-label="마이메뉴 열기 버튼"
                     >
                       <div class="avatar-32 is-active">
-                        <img
+                        <!-- <img
                           src="./assets/image/img-user-01.jpg"
                           alt="사달러아저씨"
-                        />
+                        /> -->
                       </div>
                     </button>
 
@@ -184,7 +184,7 @@
     </header>
     <aside class="sidebar sm-only">
       <header class="sidebar-header">
-        <h1>
+        <h1 class="logo">
           <a href="/">
             <img src="assets/Logo.svg" alt="내일의 집" />
           </a>
@@ -194,17 +194,17 @@
         <div class="sidebar-user">
           <a href="/">
             <div class="avatar-24">
-              <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
+              <!-- <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" /> -->
             </div>
-            <strong class="username">사달라</strong>
+            <strong class="username">사달라사달라사달라사달라사달라사달</strong>
           </a>
         </div>
 
         <!-- 로그인을 하지 않은 경우 -->
-        <div class="sidebar-auth">
+        <!-- <div class="sidebar-auth">
           <a class="btn-40 btn-outlined" href="">로그인</a>
           <a class="btn-40 btn-primary" href="">회원가입</a>
-        </div>
+        </div> -->
       </header>
 
       <nav class="sidebar-nav">
