📝 Add content for sidebar authentication state and add comment in index.html

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
           </div>
         </div>
         <!-- 로그인을 한 경우 -->
+        <!-- 로그인을 하지 않으면 아래 코드 사용하지 않음 -->
         <div class="sidebar-user-menu">
           <ul class="sidebar-user-menu-list">
             <li class="sidebar-user-menu-item">
