🩹 Correct the spelling

--- a/index.html
+++ b/index.html
@@ -209,19 +209,19 @@
 
       <nav class="sidebar-nav">
         <h2 class="sr-only">메뉴</h2>
-        <div class="dwarer-menu">
-          <button class="dwarer-menu-button" type="button">
+        <div class="drawer-menu">
+          <button class="drawer-menu-button" type="button">
             <i class="ic-store" aria-hidden></i>
             스토어
             <i class="ic-chevron" aria-hidden></i>
           </button>
 
-          <div class="dwarer-menu-content">
-            <ul claas="dwarer-menu-list">
-              <li class="dwarer-menu-item"><a href="/">스토어홈</a></li>
-              <li class="dwarer-menu-item"><a href="/">카데고리</a></li>
-              <li class="dwarer-menu-item"><a href="/">신혼가구</a></li>
-              <li class="dwarer-menu-item">
+          <div class="drawer-menu-content">
+            <ul claas="drawer-menu-list">
+              <li class="drawer-menu-item"><a href="/">스토어홈</a></li>
+              <li class="drawer-menu-item"><a href="/">카데고리</a></li>
+              <li class="drawer-menu-item"><a href="/">신혼가구</a></li>
+              <li class="drawer-menu-item">
                 <a href="/">
                   기획전
                   <i class="ic-new" lang="en" aria-label="New"></i>
