--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
             <section class="search-history">
               <header class="search-history-header">
-                <h2 ckass="title">최근 검색어</h2>
+                <h2 class="title">최근 검색어</h2>
                 <button type="button">전체 삭제</button>
               </header>
 
@@ -358,7 +358,9 @@
               <div class="search-history-content">
                 <ol class="search-history-content-list">
                   <li class="search-history-content-item">
-                    <button class="word-button" type="button">김예림</button>
+                    <button class="word-button" type="button">
+                      김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림
+                    </button>
                     <button
                       class="delete-button"
                       type="button"
@@ -389,10 +391,11 @@
                   </li>
                 </ol>
               </div>
+
               <!-- NOTE: 최근 검색어가 존재하지 않을 경우-->
-              <div class="search-history-content">
+              <!-- <div class="search-history-content">
                 <p class="placeholder">최근 검색한 내역이 없습니다.</p>
-              </div>
+              </div> -->
             </section>
           </div>
         </div>
