🐛 Hide my-menu-content by default

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       type="button"
                       aria-label="마이메뉴 열기 버튼"
                     >
-                      <div class="avatar-32 is-active">
+                      <div class="avatar-32">
                         <!-- <img
                           src="./assets/image/img-user-01.jpg"
                           alt="사달러아저씨"
@@ -329,7 +329,7 @@
 
     <div class="overlay" aria-hidden></div>
 
-    <aside class="search-modal lg-hidden">
+    <aside class="search-modal md-hidden">
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
