🚧 Mark up lnb component

--- a/index.html
+++ b/index.html
@@ -452,5 +452,45 @@
         </div>
       </div>
     </aside>
+
+    <nav class="lnb">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h1 class="sr-only">스토어 메뉴</h1>
+
+            <ul claas="lnb-list">
+              <li class="lnb-item">
+                <a href="/">스토어홈</a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">카데고리</a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">베스트</a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  오늘의딜
+                  <i class="ic-new" lang="en" aria-label="New"></i>
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">릴레이세일</a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">한정특가</a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">프리미엄</a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">기획전</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
