🚧 Align and style .lnb-item and make list scrollable

--- a/index.html
+++ b/index.html
@@ -459,8 +459,8 @@
           <div class="col-sm-4">
             <h1 class="sr-only">스토어 메뉴</h1>
 
-            <ul claas="lnb-list">
-              <li class="lnb-item">
+            <ul class="lnb-list">
+              <li class="lnb-item is-active">
                 <a href="/">스토어홈</a>
               </li>
               <li class="lnb-item">
