--- a/index.html
+++ b/index.html
@@ -37,202 +37,251 @@
     />
   </head>
   <body>
-    <header class="gnb">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4 col-md-12 col-lg-12">
-            <div class="gnb-wrapper">
-              <div class="gnb-left">
-                <h1 class="logo">
-                  <a href="/">
-                    <img src="assets/Logo.svg" alt="내일의 집" />
-                  </a>
-                </h1>
+    <header class="global-header">
+      <div class="gnb">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4 col-md-12 col-lg-12">
+              <div class="gnb-wrapper">
+                <div class="gnb-left">
+                  <h1 class="logo">
+                    <a href="/">
+                      <img src="assets/Logo.svg" alt="내일의 집" />
+                    </a>
+                  </h1>
 
-                <nav class="gnb-nav sm-hidden">
-                  <h2 class="sr-only">메뉴</h2>
-                  <ul class="gnb-nav-list">
-                    <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                    <li class="gnb-nav-item is-active">
-                      <a href="/">스토어</a>
-                    </li>
-                    <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
-                  </ul>
-                </nav>
+                  <nav class="gnb-nav sm-hidden">
+                    <h2 class="sr-only">메뉴</h2>
+                    <ul class="gnb-nav-list">
+                      <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
+                      <li class="gnb-nav-item is-active">
+                        <a href="/">스토어</a>
+                      </li>
+                      <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                    </ul>
+                  </nav>
 
-                <button
-                  class="gnb-icon-button is-menu sm-only"
-                  type="button"
-                  aria-label="메뉴 열기 버튼"
-                >
-                  <i class="ic-menu"></i>
-                </button>
-              </div>
-
-              <div class="gnb-right">
-                <div class="gnb-search lg-only">
-                  <div class="input-group">
-                    <i class="ic-search" aria-hidden></i>
-                    <input
-                      class="form-input"
-                      type="text"
-                      placeholder="스토어 검색"
-                    />
-                  </div>
-
-                  <section class="search-history">
-                    <header class="search-history-header">
-                      <h2 class="title">최근 검색어</h2>
-                      <button type="button">전체 삭제</button>
-                    </header>
-
-                    <!-- NOTE: 최근 검색어가 존재할 경우-->
-                    <div class="search-history-content">
-                      <ol class="search-history-content-list">
-                        <li class="search-history-content-item">
-                          <button class="word-button" type="button">
-                            김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림
-                          </button>
-                          <button
-                            class="delete-button"
-                            type="button"
-                            aria-label="검색어 삭제"
-                          >
-                            <i class="ic-close"></i>
-                          </button>
-                        </li>
-                        <li class="search-history-content-item">
-                          <button class="word-button" type="button">
-                            예림
-                          </button>
-                          <button
-                            class="delete-button"
-                            type="button"
-                            aria-label="검색어 삭제"
-                          >
-                            <i class="ic-close"></i>
-                          </button>
-                        </li>
-                        <li class="search-history-content-item">
-                          <button class="word-button" type="button">
-                            kimyerim
-                          </button>
-                          <button
-                            class="delete-button"
-                            type="button"
-                            aria-label="검색어 삭제"
-                          >
-                            <i class="ic-close"></i>
-                          </button>
-                        </li>
-                      </ol>
-                    </div>
-                  </section>
+                  <button
+                    class="gnb-icon-button is-menu sm-only"
+                    type="button"
+                    aria-label="메뉴 열기 버튼"
+                  >
+                    <i class="ic-menu"></i>
+                  </button>
                 </div>
 
-                <!-- 로그인을 한 경우 -->
-                <div class="gnb-icon-button-group">
-                  <button
-                    class="gnb-icon-button is-search lg-hidden"
-                    type="button"
-                    aria-label="검색창 열기 버튼"
-                  >
-                    <i class="ic-search"></i>
-                  </button>
+                <div class="gnb-right">
+                  <div class="gnb-search lg-only">
+                    <div class="input-group">
+                      <i class="ic-search" aria-hidden></i>
+                      <input
+                        class="form-input"
+                        type="text"
+                        placeholder="스토어 검색"
+                      />
+                    </div>
 
-                  <a
-                    class="gnb-icon-button sm-hidden"
-                    href="/"
-                    aria-label="스크랩북 페이지로 이동"
-                  >
-                    <i class="ic-bookmark"></i>
-                  </a>
+                    <section class="search-history">
+                      <header class="search-history-header">
+                        <h2 class="title">최근 검색어</h2>
+                        <button type="button">전체 삭제</button>
+                      </header>
 
-                  <a
-                    class="gnb-icon-button sm-hidden"
-                    href="/"
-                    aria-label="내 소식 페이지로 이동"
-                  >
-                    <i class="ic-bell"></i>
-                  </a>
-
-                  <a
-                    class="gnb-icon-button is-cart"
-                    href="/"
-                    aria-label="장바구니 페이지로 이동"
-                  >
-                    <i class="ic-cart"></i>
-                    <strong class="badge">9</strong>
-                  </a>
-
-                  <div class="my-menu sm-hidden">
-                    <button
-                      class="my-menu-button sm-hidden"
-                      type="button"
-                      aria-label="마이메뉴 열기 버튼"
-                    >
-                      <div class="avatar-32">
-                        <!-- <img
-                          src="./assets/image/img-user-01.jpg"
-                          alt="사달러아저씨"
-                        /> -->
+                      <!-- NOTE: 최근 검색어가 존재할 경우-->
+                      <div class="search-history-content">
+                        <ol class="search-history-content-list">
+                          <li class="search-history-content-item">
+                            <button class="word-button" type="button">
+                              김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림김예림
+                            </button>
+                            <button
+                              class="delete-button"
+                              type="button"
+                              aria-label="검색어 삭제"
+                            >
+                              <i class="ic-close"></i>
+                            </button>
+                          </li>
+                          <li class="search-history-content-item">
+                            <button class="word-button" type="button">
+                              예림
+                            </button>
+                            <button
+                              class="delete-button"
+                              type="button"
+                              aria-label="검색어 삭제"
+                            >
+                              <i class="ic-close"></i>
+                            </button>
+                          </li>
+                          <li class="search-history-content-item">
+                            <button class="word-button" type="button">
+                              kimyerim
+                            </button>
+                            <button
+                              class="delete-button"
+                              type="button"
+                              aria-label="검색어 삭제"
+                            >
+                              <i class="ic-close"></i>
+                            </button>
+                          </li>
+                        </ol>
                       </div>
+                    </section>
+                  </div>
+
+                  <!-- 로그인을 한 경우 -->
+                  <div class="gnb-icon-button-group">
+                    <button
+                      class="gnb-icon-button is-search lg-hidden"
+                      type="button"
+                      aria-label="검색창 열기 버튼"
+                    >
+                      <i class="ic-search"></i>
                     </button>
 
-                    <div class="my-menu-content">
-                      <ul class="my-menu-list">
-                        <li class="my-menu-item">
-                          <a href="/">마이페이지</a>
-                        </li>
-                        <li class="my-menu-item">
-                          <a href="/">나의 쇼핑</a>
-                        </li>
-                        <li class="my-menu-item">
-                          <a href="/">이벤트</a>
-                        </li>
-                        <li class="my-menu-item">
-                          <button type="button">로그아웃</button>
-                        </li>
-                      </ul>
+                    <a
+                      class="gnb-icon-button sm-hidden"
+                      href="/"
+                      aria-label="스크랩북 페이지로 이동"
+                    >
+                      <i class="ic-bookmark"></i>
+                    </a>
+
+                    <a
+                      class="gnb-icon-button sm-hidden"
+                      href="/"
+                      aria-label="내 소식 페이지로 이동"
+                    >
+                      <i class="ic-bell"></i>
+                    </a>
+
+                    <a
+                      class="gnb-icon-button is-cart"
+                      href="/"
+                      aria-label="장바구니 페이지로 이동"
+                    >
+                      <i class="ic-cart"></i>
+                      <strong class="badge">9</strong>
+                    </a>
+
+                    <div class="my-menu sm-hidden">
+                      <button
+                        class="my-menu-button sm-hidden"
+                        type="button"
+                        aria-label="마이메뉴 열기 버튼"
+                      >
+                        <div class="avatar-32">
+                          <!-- <img
+                            src="./assets/image/img-user-01.jpg"
+                            alt="사달러아저씨"
+                          /> -->
+                        </div>
+                      </button>
+
+                      <div class="my-menu-content">
+                        <ul class="my-menu-list">
+                          <li class="my-menu-item">
+                            <a href="/">마이페이지</a>
+                          </li>
+                          <li class="my-menu-item">
+                            <a href="/">나의 쇼핑</a>
+                          </li>
+                          <li class="my-menu-item">
+                            <a href="/">이벤트</a>
+                          </li>
+                          <li class="my-menu-item">
+                            <button type="button">로그아웃</button>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
+
+                    <!-- 로그인을 하지 않은 경우 -->
+                    <!-- <div class="gnb-icon-button-group">
+                    <button
+                      class="gnb-icon-button is-search lg-hidden"
+                      type="button"
+                      aria-label="검색창 열기 버튼"
+                    >
+                      <i class="ic-search"></i>
+                    </button>
+  
+                    <a
+                      class="gnb-icon-button is-cart"
+                      href="/"
+                      aria-label="장바구니 페이지로 이동"
+                    >
+                      <i class="ic-cart"></i>
+                      <strong class="badge">9</strong>
+                    </a>
+  
+                    <div class="gnb-auth sm-hidden">
+                      <a href="/"> 로그인 </a>
+                      <a href="/"> 회원가입 </a>
+                    </div>
+                  </div> -->
+
+                    <button class="sm-hidden btn-primary btn-40" type="button">
+                      글쓰기
+                      <i class="ic-chevron" aria-hidden></i>
+                    </button>
                   </div>
-
-                  <!-- 로그인을 하지 않은 경우 -->
-                  <!-- <div class="gnb-icon-button-group">
-                  <button
-                    class="gnb-icon-button is-search lg-hidden"
-                    type="button"
-                    aria-label="검색창 열기 버튼"
-                  >
-                    <i class="ic-search"></i>
-                  </button>
-
-                  <a
-                    class="gnb-icon-button is-cart"
-                    href="/"
-                    aria-label="장바구니 페이지로 이동"
-                  >
-                    <i class="ic-cart"></i>
-                    <strong class="badge">9</strong>
-                  </a>
-
-                  <div class="gnb-auth sm-hidden">
-                    <a href="/"> 로그인 </a>
-                    <a href="/"> 회원가입 </a>
-                  </div>
-                </div> -->
-
-                  <button class="sm-hidden btn-primary btn-40" type="button">
-                    글쓰기
-                    <i class="ic-chevron" aria-hidden></i>
-                  </button>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <nav class="lnb">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <h1 class="sr-only">스토어 메뉴</h1>
+
+              <ul class="lnb-list">
+                <li class="lnb-item is-active">
+                  <a href="/">스토어홈</a>
+                </li>
+                <li class="lnb-item">
+                  <a href="/">카데고리</a>
+                </li>
+                <li class="lnb-item">
+                  <a href="/">베스트</a>
+                </li>
+                <li class="lnb-item">
+                  <a href="/">
+                    오늘의딜
+                    <i class="ic-new" lang="en" aria-label="New"></i>
+                  </a>
+                </li>
+                <li class="lnb-item">
+                  <a href="/">릴레이세일</a>
+                </li>
+                <li class="lnb-item">
+                  <a href="/">한정특가</a>
+                </li>
+                <li class="lnb-item">
+                  <a href="/">프리미엄</a>
+                </li>
+                <li class="lnb-item">
+                  <a href="/">기획전</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
+
+    <main class="product-show">
+      <!--상품 상세 페이지 본론-->
+    </main>
+
+    <footer class="global-footer"></footer>
+
     <aside class="sidebar sm-only">
       <header class="sidebar-header">
         <h1 class="logo">
@@ -452,45 +501,5 @@
         </div>
       </div>
     </aside>
-
-    <nav class="lnb">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <h1 class="sr-only">스토어 메뉴</h1>
-
-            <ul class="lnb-list">
-              <li class="lnb-item is-active">
-                <a href="/">스토어홈</a>
-              </li>
-              <li class="lnb-item">
-                <a href="/">카데고리</a>
-              </li>
-              <li class="lnb-item">
-                <a href="/">베스트</a>
-              </li>
-              <li class="lnb-item">
-                <a href="/">
-                  오늘의딜
-                  <i class="ic-new" lang="en" aria-label="New"></i>
-                </a>
-              </li>
-              <li class="lnb-item">
-                <a href="/">릴레이세일</a>
-              </li>
-              <li class="lnb-item">
-                <a href="/">한정특가</a>
-              </li>
-              <li class="lnb-item">
-                <a href="/">프리미엄</a>
-              </li>
-              <li class="lnb-item">
-                <a href="/">기획전</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
   </body>
 </html>
