--- a/index.html
+++ b/index.html
@@ -280,7 +280,52 @@
       <!--상품 상세 페이지 본론-->
     </main>
 
-    <footer class="global-footer"></footer>
+    <footer class="global-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h3 class="global-footer-title">
+              <a href="/"> 고객센터 </a>
+              <i class="ic-chevron" aria-hidden></i>
+            </h3>
+
+            <a class="global-footer-contact" href="tel:1004-1004">1004-1004</a>
+            <p class="global-footer-time">
+              평일 09:00 ~ 18:00 (주말 &amp; 공휴일 제외)
+            </p>
+
+            <dl class="global-footer-detail-list">
+              <div class="global-footer-detail-item">
+                <dt>상호명</dt>
+                <dl>즐거운 프엔세상 김예림</dl>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>이메일</dt>
+                <dl>
+                  <a href="mailto:kimyerimweb@gmail.com"
+                    >kimyerimweb@gmail.com</a
+                  >
+                </dl>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>대표이사</dt>
+                <dl>김예림</dl>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>주소</dt>
+                <dl>
+                  <address>
+                    <a href="https://github.com/kimyerimweb" target="_blank">
+                      https://github.com/kimyerimweb</a
+                    >
+                  </address>
+                </dl>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <aside class="sidebar sm-only">
       <header class="sidebar-header">
