--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                       <strong class="badge">9</strong>
                     </a>
 
-                    <div class="my-menu sm-hidden">
+                    <div class="my-menu is-active sm-hidden">
                       <button
                         class="my-menu-button sm-hidden"
                         type="button"
@@ -278,6 +278,21 @@
 
     <main class="product-show">
       <!--상품 상세 페이지 본론-->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="breadcrumb">
+              <a href="/">가전</a>
+              <i class="ic-chevron" aria-hidden></i>
+              <a href="/">계절가전</a>
+              <i class="ic-chevron" aria-hidden></i>
+              <a href="">전기히터/온풍기</a>
+              <i class="ic-chevron" aria-hidden></i>
+              <a href="">전기히터</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="global-footer">
