--- a/index.html
+++ b/index.html
@@ -293,6 +293,58 @@
           </div>
         </div>
       </div>
+
+      <div role="region">
+        <ol>
+          <li role="tabpanel" aria-labelledby="product-carousel-tab-1">
+            <figure>
+              <img src="./assets/image/img-product-01.jpg" alt="" />
+            </figure>
+            <figcaption>보아르 전기히터 상세 이미지 1</figcaption>
+          </li>
+          <li role="tabpanel" aria-labelledby="product-carousel-tab-2">
+            <figure>
+              <img src="./assets/image/img-product-02.jpg" alt="" />
+            </figure>
+            <figcaption>보아르 전기히터 상세 이미지 2</figcaption>
+          </li>
+          <li role="tabpanel" aria-labelledby="product-carousel-tab-3">
+            <figure>
+              <img src="./assets/image/img-product-03.jpg" alt="" />
+            </figure>
+            <figcaption>보아르 전기히터 상세 이미지 3</figcaption>
+          </li>
+          <li role="tabpanel" aria-labelledby="product-carousel-tab-4">
+            <figure>
+              <img src="./assets/image/img-product-04.jpg" alt="" />
+            </figure>
+            <figcaption>보아르 전기히터 상세 이미지 4</figcaption>
+          </li>
+        </ol>
+
+        <ol role="tablist">
+          <li role="tab">
+            <button type="button" id="product-carousel-tab-1">
+              <img src="./assets/image/img-product-01.jpg" alt="1번 이미지" />
+            </button>
+          </li>
+          <li role="tab">
+            <button type="button" id="product-carousel-tab-2">
+              <img src="./assets/image/img-product-02.jpg" alt="2번 이미지" />
+            </button>
+          </li>
+          <li role="tab">
+            <button type="button" id="product-carousel-tab-3">
+              <img src="./assets/image/img-product-03.jpg" alt="3번 이미지" />
+            </button>
+          </li>
+          <li role="tab">
+            <button type="button" id="product-carousel-tab-4">
+              <img src="./assets/image/img-product-04.jpg" alt="4번 이미지" />
+            </button>
+          </li>
+        </ol>
+      </div>
     </main>
 
     <footer class="global-footer">
