--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#3da5f5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -659,5 +663,8 @@
         </div>
       </div>
     </aside>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="product-carousel.js"></script>
   </body>
 </html>
