♻️ Change star-rating from module to mixins.

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 </h1>
 
                 <div class="info-review">
-                  <div class="star-rating-13">
+                  <div class="star-rating">
                     <i class="ic-star is-active"></i>
                     <i class="ic-star is-active"></i>
                     <i class="ic-star is-active"></i>
