--- a/index.html
+++ b/index.html
@@ -416,7 +416,8 @@
                 </div>
               </header>
 
-              <div class="product-info-price">
+              <!--NOTE: 모바일용 가격-->
+              <div class="product-info-price sm-only">
                 <div class="info-original-price">
                   <div class="discount-rate">
                     <strong>34</strong>
@@ -444,9 +445,40 @@
                 </p>
               </div>
 
-              <div class="product-info-delivery">
-                <span>일반택배</span>
-                <strong class="tag-gray">무료배송</strong>
+              <!--NOTE: 태블릿 이후 가격-->
+              <div class="product-info-price sm-hidden">
+                <div class="info-price-wrapper">
+                  <div class="discount-rate">
+                    <strong>34</strong>
+                    <span>%</span>
+                  </div>
+
+                  <div class="info-price">
+                    <div class="price-discount">
+                      <strong class="amount">49,900</strong>
+                      <span class="currency">원</span>
+                    </div>
+
+                    <div class="info-sale-price">
+                      <div class="price-32">
+                        <strong class="amount">32,900</strong>
+                        <span class="currency">원</span>
+                      </div>
+
+                      <strong class="tag-red">특가</strong>
+                    </div>
+                  </div>
+                </div>
+
+                <p class="info-point">
+                  <strong>987P</strong>
+                  <span>적립해드립니다. (VIP 3배 혜택 적용됨)</span>
+                </p>
+
+                <div class="product-info-delivery">
+                  <span>일반택배</span>
+                  <strong class="tag-gray">무료배송</strong>
+                </div>
               </div>
             </section>
           </div>
