🐛 Put back missing delivery mark up

--- a/index.html
+++ b/index.html
@@ -443,6 +443,11 @@
                   <strong>987P</strong>
                   <span>적립해드립니다. (VIP 3배 혜택 적용됨)</span>
                 </p>
+
+                <div class="product-info-delivery">
+                  <span>일반택배</span>
+                  <strong class="tag-gray">무료배송</strong>
+                </div>
               </div>
 
               <!--NOTE: 태블릿 이후 가격-->
