💄 Implement order-form style

--- a/index.html
+++ b/index.html
@@ -538,7 +538,9 @@
                 <button class="btn-outlined btn-55" type="button">
                   장바구니
                 </button>
-                <button class="btn-primary btn-55" type="submit">구매</button>
+                <button class="btn-primary btn-55" type="submit">
+                  바로구매
+                </button>
               </div>
             </form>
           </div>
