--- a/index.html
+++ b/index.html
@@ -543,11 +543,7 @@
 
                       <footer class="checkout-footer">
                         <div class="checkout-select">
-                          <select
-                            class="form-select"
-                            id="checkout-item-1"
-                            disabled
-                          >
+                          <select class="form-select" id="checkout-item-1">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
