💄 Create a shared component: product section header

--- a/components.html
+++ b/components.html
@@ -1,111 +1,161 @@
-<div class="container">
-  <div>
-    <strong class="tag-red">특가</strong>
-    <strong class="tag-gray">무료배송</strong>
-    <strong class="tag-green">첫리뷰 두배적립!</strong>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <strong class="tag-red">특가</strong>
+        <strong class="tag-gray">무료배송</strong>
+        <strong class="tag-green">첫리뷰 두배적립!</strong>
+      </div>
 
-  <div>
-    <div class="avatar-32">
-      <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
-    </div>
-    <div class="avatar-24">
-      <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
-    </div>
-  </div>
+      <div>
+        <div class="avatar-32">
+          <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
+        </div>
+        <div class="avatar-24">
+          <img src="./assets/image/img-user-01.jpg" alt="사달러아저씨" />
+        </div>
+      </div>
 
-  <div>
-    <div class="star-rating-16">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star"></i>
-    </div>
-  </div>
+      <div>
+        <div class="star-rating-16">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star"></i>
+        </div>
+      </div>
 
-  <div>
-    <div class="price-16">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
-    </div>
-    <div class="price-20">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
-    </div>
-    <div class="price-32">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
-    </div>
-    <div class="price-discount">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
-    </div>
-  </div>
+      <div>
+        <div class="price-16">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-20">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-32">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-discount">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+      </div>
 
-  <div>
-    <button type="button" class="btn-primary btn-55">버튼입니다</button>
-    <button type="button" class="btn-secondary btn-40">버튼입니다</button>
-    <button type="button" class="btn-outlined btn-48">버튼입니다</button>
-    <button type="button" class="btn-ghost btn-32">버튼입니다</button>
-    <button type="button" class="btn-primary btn-55" disabled>
-      버튼입니다
-    </button>
-    <button type="button" class="btn-secondary btn-40" disabled>
-      버튼입니다
-    </button>
-    <button type="button" class="btn-outlined btn-48" disabled>
-      버튼입니다
-    </button>
-    <button type="button" class="btn-ghost btn-32" disabled>버튼입니다</button>
-  </div>
-  <div>
-    <div class="select-group is-active">
-      <select class="form-select" disabled>
-        <option value="1">
-          선택 사항1 선택 사항1선택 사항1선택 사항1선택 사항1선택 사항1선택
-          사항1선택 사항1선택 사항1선택 사항1선택 사항1선택 사항1선택 사항1선택
-          사항1
-        </option>
-        <option value="2">선택 사항2</option>
-        <option value="3">선택 사항3</option>
-        <option value="4">선택 사항4</option>
-        <option value="5">선택 사항5</option>
-      </select>
-      <i class="ic-caret" aria-hidden></i>
-    </div>
+      <div>
+        <button type="button" class="btn-primary btn-55">버튼입니다</button>
+        <button type="button" class="btn-secondary btn-40">버튼입니다</button>
+        <button type="button" class="btn-outlined btn-48">버튼입니다</button>
+        <button type="button" class="btn-ghost btn-32">버튼입니다</button>
+        <button type="button" class="btn-primary btn-55" disabled>
+          버튼입니다
+        </button>
+        <button type="button" class="btn-secondary btn-40" disabled>
+          버튼입니다
+        </button>
+        <button type="button" class="btn-outlined btn-48" disabled>
+          버튼입니다
+        </button>
+        <button type="button" class="btn-ghost btn-32" disabled>
+          버튼입니다
+        </button>
+      </div>
+      <div>
+        <div class="select-group is-active">
+          <select class="form-select" disabled>
+            <option value="1">
+              선택 사항1 선택 사항1선택 사항1선택 사항1선택 사항1선택 사항1선택
+              사항1선택 사항1선택 사항1선택 사항1선택 사항1선택 사항1선택
+              사항1선택 사항1
+            </option>
+            <option value="2">선택 사항2</option>
+            <option value="3">선택 사항3</option>
+            <option value="4">선택 사항4</option>
+            <option value="5">선택 사항5</option>
+          </select>
+          <i class="ic-caret" aria-hidden></i>
+        </div>
 
-    <div class="input-group">
-      <i class="ic-search" aria-hidden></i>
-      <input class="form-input" type="text" placeholder="스토어 검색" />
-    </div>
-  </div>
+        <div class="input-group">
+          <i class="ic-search" aria-hidden></i>
+          <input class="form-input" type="text" placeholder="스토어 검색" />
+        </div>
+      </div>
 
-  <div>
-    <div class="pagination">
-      <button class="page-control page-prev" type="button">
-        <i class="ic-chevron"></i>
-      </button>
-      <ol class="page-list">
-        <li class="page-item is-active">
-          <a href="#">1</a>
-        </li>
-        <li class="page-item is-active">
-          <a href="#">2</a>
-        </li>
-        <li class="page-item">
-          <a href="#">3</a>
-        </li>
-        <li class="page-item">
-          <a href="#">4</a>
-        </li>
-        <li class="page-item">
-          <a href="#">55555555555555555</a>
-        </li>
-      </ol>
-      <button class="page-control page-next" type="button">
-        <i class="ic-chevron"></i>
-      </button>
+      <div>
+        <div class="pagination">
+          <button class="page-control page-prev" type="button">
+            <i class="ic-chevron"></i>
+          </button>
+          <ol class="page-list">
+            <li class="page-item is-active">
+              <a href="#">1</a>
+            </li>
+            <li class="page-item is-active">
+              <a href="#">2</a>
+            </li>
+            <li class="page-item">
+              <a href="#">3</a>
+            </li>
+            <li class="page-item">
+              <a href="#">4</a>
+            </li>
+            <li class="page-item">
+              <a href="#">55555555555555555</a>
+            </li>
+          </ol>
+          <button class="page-control page-next" type="button">
+            <i class="ic-chevron"></i>
+          </button>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <header class="product-section-header">
+            <h1 class="title">섹션 타이틀</h1>
+          </header>
+        </div>
+
+        <div>
+          <header class="product-section-header">
+            <h1 class="title">섹션 타이틀</h1>
+            <strong class="badge" aria-label="0개">0</strong>
+            <a class="text-button" href="/">버튼</a>
+          </header>
+        </div>
+
+        <div>
+          <header class="product-section-header">
+            <h1 class="title">섹션 타이틀</h1>
+            <strong class="badge" aria-label="0개">0</strong>
+            <button class="icon-button" type="button">
+              <i class="ic-chevron" aria-hidden></i>
+            </button>
+          </header>
+        </div>
+
+        <div>
+          <header class="product-section-header">
+            <h1 class="title">섹션 타이틀</h1>
+            <strong class="badge" aria-label="0개">0</strong>
+            <button class="icon-button is-right" type="button">
+              <i class="ic-chevron" aria-hidden></i>
+            </button>
+          </header>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+  </body>
+</html>
