Create a shared component: product table

--- a/components.html
+++ b/components.html
@@ -156,6 +156,50 @@
           </header>
         </div>
       </div>
+
+      <div>
+        <table class="product-table">
+          <!-- !-->
+          <thead></thead>
+          <tbody>
+            <tr>
+              <th scope="row">배송</th>
+              <td>일반 택비</td>
+            </tr>
+            <tr>
+              <th scope="row">반품배송비</th>
+              <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam officia aliquam pariatur accusamus sed, quod ut
+                perferendis iusto tempora commodi minus hic voluptate,
+                distinctio neque placeat necessitatibus, praesentium eum ullam.
+              </th>
+              <td>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam officia aliquam pariatur accusamus sed, quod ut
+                perferendis iusto tempora commodi minus hic voluptate,
+                distinctio neque placeat necessitatibus, praesentium eum
+                ullam.Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam officia aliquam pariatur accusamus sed, quod ut
+                perferendis iusto tempora commodi minus hic voluptate,
+                distinctio neque placeat necessitatibus, praesentium eum
+                ullam.Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam officia aliquam pariatur accusamus sed, quod ut
+                perferendis iusto tempora commodi minus hic voluptate,
+                distinctio neque placeat necessitatibus, praesentium eum
+                ullam.Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam officia aliquam pariatur accusamus sed, quod ut
+                perferendis iusto tempora commodi minus hic voluptate,
+                distinctio neque placeat necessitatibus, praesentium eum ullam.
+              </td>
+            </tr>
+          </tbody>
+          <tfoot></tfoot>
+        </table>
+      </div>
     </div>
   </body>
 </html>
