🐛 Move sm-hidden class to title's parent

--- a/index.html
+++ b/index.html
@@ -650,8 +650,8 @@
               id="product-spec"
               role="tabpanel"
             >
-              <header class="product-section-header">
-                <h1 class="title sm-hidden">상품정보</h1>
+              <header class="product-section-header sm-hidden">
+                <h1 class="title">상품정보</h1>
               </header>
 
               <div class="product-section-content">
