--- a/index.html
+++ b/index.html
@@ -754,6 +754,8 @@
                 </table>
               </div>
             </section>
+
+            <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
       </div>
