🐛  Fix star-rating (4->5)

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
                             <i class="ic-star is-active"></i>
                             <i class="ic-star is-active"></i>
                             <i class="ic-star is-active"></i>
-                            <i class="ic-star"></i>
+                            <i class="ic-star is-active"></i>
                           </div>
 
                           <div class="misc">
