💄  Set width size of active bars

--- a/index.html
+++ b/index.html
@@ -789,7 +789,11 @@
                         <dt>5점</dt>
                         <dd>
                           <div class="bar-graph">
-                            <div class="active-bar" aria-hidden></div>
+                            <div
+                              class="active-bar"
+                              style="width: 82.5%"
+                              aria-hidden
+                            ></div>
                           </div>
                           <strong class="count" aria-label="467명">467</strong>
                         </dd>
@@ -798,7 +802,11 @@
                         <dt>4점</dt>
                         <dd>
                           <div class="bar-graph">
-                            <div class="active-bar" aria-hidden></div>
+                            <div
+                              class="active-bar"
+                              style="width: 15.37%"
+                              aria-hidden
+                            ></div>
                           </div>
                           <strong class="count" aria-label="87명">87</strong>
                         </dd>
@@ -807,7 +815,11 @@
                         <dt>3점</dt>
                         <dd>
                           <div class="bar-graph">
-                            <div class="active-bar" aria-hidden></div>
+                            <div
+                              class="active-bar"
+                              aria-hidden
+                              style="width: 2.3%"
+                            ></div>
                           </div>
                           <strong class="count" aria-label="13명">13</strong>
                         </dd>
