--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="/dist/app.js" async></script>
   </head>
   <body>
     <header class="global-header">
