--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,11 @@
                 <h1 class="title">문의</h1>
                 <strong class="badge" aria-label="0개">96</strong>
                 <a class="text-button" href="/">문의하기</a>
-                <button class="icon-button sm-only" type="button" aria-label="더보기">
+                <button
+                  class="icon-button sm-only"
+                  type="button"
+                  aria-label="더보기"
+                >
                   <i class="ic-chevron" aria-hidden></i>
                 </button>
               </header>
@@ -1339,11 +1343,12 @@
                             </time>
                           </div>
                           <p>
-                            안녕하세요 고객님, 보아르입니다:)
-                            현재 고객님의 주문 정보가 확인되지 않아 바로 안내드리지 못하는 점 양해 부탁드립니다.
-                            문의하신 제품의 경우 현재 주문폭주로 인한 예약 판매중으로 순차 발송 진행되고 있습니다.
-                            주문 시 최대한 빠른 발송 진행될 수 있도록 노력하겠습니다.
-                            감사합니다.
+                            안녕하세요 고객님, 보아르입니다:) 현재 고객님의 주문
+                            정보가 확인되지 않아 바로 안내드리지 못하는 점 양해
+                            부탁드립니다. 문의하신 제품의 경우 현재 주문폭주로
+                            인한 예약 판매중으로 순차 발송 진행되고 있습니다.
+                            주문 시 최대한 빠른 발송 진행될 수 있도록
+                            노력하겠습니다. 감사합니다.
                           </p>
                         </div>
                       </div>
@@ -1399,7 +1404,58 @@
               </div>
             </section> -->
             <div class="product-section-divider sm-only" aria-hidden></div>
-
+            <div role="tabpanel" id="product-shipment">
+              <section class="product-section">
+                <header class="product-section-header">
+                  <h1 class="title">배송</h1>
+                </header>
+                <div class="product-section-content">
+                  <table class="product-table">
+                    <tbody>
+                      <tr>
+                        <th scope="row">배송</th>
+                        <td>일반택배</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">배송비</th>
+                        <td>무료 배송</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">배송불가 지역</th>
+                        <td>배송불가 지역이 없습니다</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </section>
+              <div class="product-section-divider sm-only" aria-hidden></div>
+              <section class="product-section">
+                <header class="product-section-header">
+                  <h1 class="title">교환/환불</h1>
+                </header>
+                <div class="product-section-content">
+                  <table class="product-table">
+                    <tbody>
+                      <tr>
+                        <th scope="row">반품배송비</th>
+                        <td>
+                          2,500원 (최초 배송비가 무료인 경우 5,000원 부과)
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">교환배송비</th>
+                        <td>5,000원</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">보내실 곳</th>
+                        <td>(00000) 서울 종로구 누하동</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="product-section-divider sm-only" aria-hidden></div>
+              </section>
+            </div>
           </div>
         </div>
       </div>
