💄 Handle mobile layout of .product-shipment

--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,17 @@
               </div>
             </section> -->
             <div class="product-section-divider sm-only" aria-hidden></div>
-            <div role="tabpanel" id="product-shipment">
+            <div
+              role="tabpanel"
+              id="product-shipment"
+              class="product-shipment is-open"
+            >
+              <header class="product-section-header sm-only">
+                <h1 class="title">배송/교환/환불</h1>
+                <button class="icon-button" type="button">
+                  <i class="ic-chevron" aria-hidden></i>
+                </button>
+              </header>
               <section class="product-section">
                 <header class="product-section-header">
                   <h1 class="title">배송</h1>
@@ -1453,8 +1463,8 @@
                     </tbody>
                   </table>
                 </div>
-                <div class="product-section-divider sm-only" aria-hidden></div>
               </section>
+              <div class="product-section-divider sm-only" aria-hidden></div>
             </div>
           </div>
         </div>
