🚧 Initiate a new carousel: user-gallery

--- a/index.html
+++ b/index.html
@@ -2022,6 +2022,6 @@
     </aside>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-    <script src="product-carousel.js"></script>
+    <script src="carousels.js"></script>
   </body>
 </html>
