🚧 Add remaining thumnails

--- a/index.html
+++ b/index.html
@@ -755,7 +755,42 @@
                       </li>
                     </ol>
                   </div>
-                  <div class="user-gallery-thumnail"></div>
+                  <div class="user-gallery-thumnail">
+                    <ol class="thumnail-list">
+                      <li class="thumnail-item">
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-01.jpg"
+                            alt="1번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                      <li class="thumnail-item">
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-02.jpg"
+                            alt="2번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                      <li class="thumnail-item">
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-03.jpg"
+                            alt="3번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                      <li class="thumnail-item">
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-04.jpg"
+                            alt="4번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                    </ol>
+                  </div>
                 </div>
               </div>
             </section>
