🚧 Set aria-roles to user-gallery elements

--- a/index.html
+++ b/index.html
@@ -659,7 +659,11 @@
                 <div class="user-gallery" role="region">
                   <div class="user-gallery-slider">
                     <ol class="slider-list">
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-1"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -684,7 +688,11 @@
                           </div>
                         </div>
                       </li>
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-2"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -707,7 +715,11 @@
                           </div>
                         </div>
                       </li>
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-3"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -730,7 +742,11 @@
                           </div>
                         </div>
                       </li>
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-4"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -756,8 +772,12 @@
                     </ol>
                   </div>
                   <div class="user-gallery-thumnail">
-                    <ol class="thumnail-list">
-                      <li class="thumnail-item">
+                    <ol class="thumnail-list" role="tablist">
+                      <li
+                        class="thumnail-item"
+                        id="user-gallery-tab-1"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/image/img-review-01.jpg"
@@ -765,7 +785,11 @@
                           />
                         </button>
                       </li>
-                      <li class="thumnail-item">
+                      <li
+                        class="thumnail-item"
+                        id="user-gallery-tab-2"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/image/img-review-02.jpg"
@@ -773,7 +797,11 @@
                           />
                         </button>
                       </li>
-                      <li class="thumnail-item">
+                      <li
+                        class="thumnail-item"
+                        id="user-gallery-tab-3"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/image/img-review-03.jpg"
@@ -781,7 +809,11 @@
                           />
                         </button>
                       </li>
-                      <li class="thumnail-item">
+                      <li
+                        class="thumnail-item"
+                        id="user-gallery-tab-4"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/image/img-review-04.jpg"
