✨ Implement user gallery thumbnail and its control

--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
                 </div>
               </div>
             </section>
+            <div class="product-section-divider sm-only" aria-hidden></div>
 
             <form class="order-form lg-only" action="/" method="POST">
               <div class="order-inputs">
@@ -770,7 +771,24 @@
                         </div>
                       </li>
                     </ol>
+                    <div class="user-gallery-controls sm-hidden">
+                      <button
+                        type="button"
+                        class="control-button is-prev"
+                        aria-label="이전 이미지"
+                      >
+                        <i class="ic-chevron" aria-hidden></i>
+                      </button>
+                      <button
+                        type="button"
+                        class="control-button is-next"
+                        aria-label="다음 이미지"
+                      >
+                        <i class="ic-chevron" aria-hidden></i>
+                      </button>
+                    </div>
                   </div>
+
                   <div class="user-gallery-thumnail">
                     <ol class="thumbnail-list" role="tablist">
                       <li
