🚧 Add classNames for responsive user-gallery

--- a/index.html
+++ b/index.html
@@ -487,7 +487,6 @@
                 </div>
               </div>
             </section>
-            <div class="product-section-divider sm-only" aria-hidden></div>
 
             <form class="order-form lg-only" action="/" method="POST">
               <div class="order-inputs">
@@ -590,6 +589,8 @@
             </form>
           </div>
         </div>
+
+        <div class="product-section-divider sm-only" aria-hidden></div>
 
         <div class="row sm-only">
           <div class="col-sm-4">
@@ -792,7 +793,7 @@
             </section>
           </div>
         </div>
-        <div class="product-section-divider sm-only" aria-hidden></div>
+        <div class="product-section-divider is-big sm-only" aria-hidden></div>
       </div>
 
       <div class="product-tab">
