🚧 Implement order-cta

--- a/index.html
+++ b/index.html
@@ -793,6 +793,7 @@
             </section>
           </div>
         </div>
+
         <div class="product-section-divider is-big sm-only" aria-hidden></div>
       </div>
 
@@ -2040,6 +2041,14 @@
             <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
+      </div>
+
+      <div class="order-cta lg-hidden">
+        <button type="button" class="btn-48 btn-ghost">
+          <i class="ic-bookmark" aria-hidden=""></i>
+          <span aria-label="북마크 18,302회">18,302</span>
+        </button>
+        <button type="button" class="btn-48 btn-primary">구매하기</button>
       </div>
     </main>
 
