--- a/index.html
+++ b/index.html
@@ -2574,6 +2574,15 @@
       </form>
     </aside>
 
+    <aside class="cart-modal">
+      <h1 class="cart-title">장바구니에 상품을 담았습니다</h1>
+
+      <div class="button-group">
+        <a href="/" class="btn-48 btn-primary">장바구니 보러가기</a>
+        <button class="btn-48 btn-secondary" type="button">확인</button>
+      </div>
+    </aside>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="carousels.js"></script>
   </body>
