🚧 Style mobile bookmark toast

--- a/index.html
+++ b/index.html
@@ -2587,7 +2587,7 @@
     <aside class="bookmark-toast">
       <h1 class="bookmark-title">스크랩했습니다</h1>
       <button class="close-button" type="button" aria-label="닫기 버튼">
-        <i class="" ic-close aria-hidden></i>
+        <i class="ic-close" ic-close aria-hidden></i>
       </button>
 
       <div class="button-group">
@@ -2597,12 +2597,12 @@
     </aside>
 
     <!--북마크에서 삭제했을 때-->
-    <aside class="bookmark-toast">
+    <!-- <aside class="bookmark-toast">
       <h1 class="bookmark-title">스크랩북에서 삭제했습니다</h1>
       <button class="close-button" type="button" aria-label="닫기 버튼">
-        <i class="" ic-close aria-hidden></i>
+        <i class="ic-close" ic-close aria-hidden></i>
       </button>
-    </aside>
+    </aside> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="carousels.js"></script>
