--- a/index.html
+++ b/index.html
@@ -2265,7 +2265,7 @@
 
       <nav class="sidebar-nav">
         <h2 class="sr-only">메뉴</h2>
-        <div class="drawer-menu is-open">
+        <div class="drawer-menu is-open is-active">
           <button class="drawer-menu-button" type="button">
             <i class="ic-community" aria-hidden></i>
             커뮤니티
@@ -2301,7 +2301,7 @@
             </ul>
           </div>
         </div>
-        <div class="drawer-menu is-active is-open">
+        <div class="drawer-menu">
           <button class="drawer-menu-button" type="button">
             <i class="ic-store" aria-hidden></i>
             스토어
@@ -2341,7 +2341,7 @@
           </div>
         </div>
 
-        <div class="drawer-menu is-open">
+        <div class="drawer-menu">
           <button class="drawer-menu-button" type="button">
             <i class="ic-expert" aria-hidden></i>
             인테리어시공
