🚧 Remove is-open class

--- a/index.html
+++ b/index.html
@@ -1807,11 +1807,7 @@
               </div>
             </section> -->
             <div class="product-section-divider sm-only" aria-hidden></div>
-            <div
-              role="tabpanel"
-              id="product-shipment"
-              class="product-shipment is-open"
-            >
+            <div role="tabpanel" id="product-shipment" class="product-shipment">
               <header class="product-section-header sm-only">
                 <h1 class="title">배송/교환/환불</h1>
                 <button class="icon-button" type="button">
