🚧 Remove is-active class

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                       <strong class="badge">9</strong>
                     </a>
 
-                    <div class="my-menu is-active sm-hidden">
+                    <div class="my-menu sm-hidden">
                       <button
                         class="my-menu-button sm-hidden"
                         type="button"
