--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       rel="stylesheet"
     />
     <script src="/dist/app.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   </head>
   <body>
     <header class="global-header">
